--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.2.0
 constantly==15.1.0
 cryptography==41.0.2
 cssselect==1.2.0
+et-xmlfile==1.1.0
 filelock==3.12.2
 hyperlink==21.0.0
 idna==3.4
@@ -14,7 +15,10 @@ itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
 lxml==4.9.3
+numpy==1.25.1
+openpyxl==3.1.2
 packaging==23.1
+pandas==2.0.3
 parsel==1.8.1
 Protego==0.2.1
 pyasn1==0.5.0
@@ -22,6 +26,8 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 PyDispatcher==2.0.7
 pyOpenSSL==23.2.0
+python-dateutil==2.8.2
+pytz==2023.3
 queuelib==1.6.2
 requests==2.31.0
 requests-file==1.5.1
@@ -31,6 +37,7 @@ six==1.16.0
 tldextract==3.4.4
 Twisted==22.10.0
 typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==2.0.4
 w3lib==2.1.1
 zope.interface==6.0
